--- a/AuthApp/AuthApp.csproj
+++ b/AuthApp/AuthApp.csproj
@@ -8,4 +8,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+    <Folder Include="Views\Pages\" />
+    <Folder Include="Views\Window\" />
+  </ItemGroup>
+
 </Project>
