--- a/AuthApp.Domain/AuthApp.Domain.csproj
+++ b/AuthApp.Domain/AuthApp.Domain.csproj
@@ -7,4 +7,8 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.3" />
+	</ItemGroup>
+
 </Project>
