--- a/AuthApp/AuthApp.csproj
+++ b/AuthApp/AuthApp.csproj
@@ -9,8 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ViewModels\" />
-    <Folder Include="Views\Pages\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.28" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+    <PackageReference Include="PasswordBoxMVVM" Version="1.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AuthApp.Domain\AuthApp.Domain.csproj" />
+    <ProjectReference Include="..\AuthApp.Persistance\AuthApp.Persistance.csproj" />
   </ItemGroup>
 
 </Project>
